modify some texts

--- a/index.html
+++ b/index.html
@@ -169,19 +169,19 @@
             </div>
 
             <div class="col-md-3">
-                <h3>BOOTSTRAP 4</h3>
+                <h3>JAVASCRIPT</h3>
                 <div class="feature">
-                    <i class="fa fa-bold fa-4x" data-fa-transform="shrink-3 up-5"></i>
+                    <img src="./images/js-brands.svg" class="js-image">
                 </div>
-                    <p class="lead">build with the latest BOOTSTRAP 4</p>
+                    <p class="lead">build with the latest Javascript</p>
             </div>
 
             <div class="col-md-3">
-                <h3>JAVASCRIPT</h3>
+                <h3>REACT JS</h3>
                 <div class="feature">
-                    <i class="fa fa-code fa-4x" data-fa-transform="shrink-3 up-5"></i>
+                    <img src="./images/react-brands.svg" class="js-image">
                 </div>
-                    <p class="lead">build with the latest Javascript</p>
+                    <p class="lead">build with the latest BOOTSTRAP 4</p>
             </div>
         </div> <!--end row here-->
 
@@ -208,12 +208,12 @@
             <div class="col-md-6 clients">
                 <div class="row">
                     <div class="col-md-4">
-                       <img data-aos="fade-right" src="./images/back2.jpg" id="er" alt="" srcset="">
+                       <img data-aos="fade-right" src="./images/cloud.JPG" id="er" alt="" srcset="" class="cloudmart">
                     </div>
                     <div class="col-md-8">
                         <blockquote>
                             <i class="fa fa-quote-left"></i>
-                            my name is Akinyemi Bamidele, I have worked for so many companies and I am willing to work with you guys
+                            CloudMard is a shopping 💳 web app where you can order for wears.
                         </blockquote>
                     </div>
                 </div>
@@ -222,12 +222,12 @@
             <div class="col-md-6 clients">
                 <div class="row">
                     <div class="col-md-4">
-                       <img data-aos="fade-left"src="./images/fahrul-razi-BR6lrzCPYPk-unsplash.jpg" id="ew" alt="" srcset="" class="img-fluid">
+                       <img data-aos="fade-left"src="./images/BD.png" id="ew" alt="" srcset="" class="img-fluid">
                     </div>
                     <div class="col-md-8">
                         <blockquote>
                             <i class="fa fa-quote-left"></i>
-                            my name is Akinyemi Bamidele, I have worked for so many companies and I am willing to work with you guys
+                            Bammy_dee is a web app which you can use to order food.
                         </blockquote>
                     </div>
                 </div>
@@ -251,7 +251,6 @@
 <footer>
     <div class="row justify-content-center">
         <div class="col-md-5 text-center">
-            <img src="" alt="" srcset="">
             <p>Contact me with the information below</p>
             <strong>Contact Info</strong>
             <p>(+234) 7-060-797-442 <br>akinyemibamidele2@gmail.com</p>
