--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<link rel="icon" href="../images/newlogo.png" type="image/icon type">
+<link rel="icon" href="./images/bitmap.png" type="image/icon type">
     <link rel="stylesheet" href="../css/index.css">
 </head>
 <body data-spy="scroll" data-target="#collapsibleNavbar">
